--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,68 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-weight: normal;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.container {
+  width: 50%;
+  height: 50%;
+  margin: 150px auto;
+  padding: 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.form {
+    display: flex;
+    justify-content: space-between;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+input {
+  padding: 10px;
+  margin-top: 15px;
+  height: 50px;
+  border: 1px solid black;
+  border-radius: 10px;
+  outline: none;
+}
+
+#submit {
+  background-color: #fff;
+  width: 75px;
+  align-self: flex-end;
+}
+
+#submit:hover {
+  cursor: pointer;
+}
+
+.table {
+    width: 100%;
+    margin-top: 15px;
+}
+
+.table__title {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 0 40px;
+  justify-content: space-between;
 }
 
-.App-link {
-  color: #61dafb;
+.table__items {
+  margin-top: 15px;
+  padding: 5px 40px;
+  border: 2px solid black;
+  border-radius: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.table__item {
+  display: flex;
+  justify-content: space-between;
+}
+
+.table__item:nth-of-type(n + 2) {
+  margin-top: 15px;
+}
+
+.table__delete:hover {
+  cursor: pointer;
 }
