--- a/src/App.css
+++ b/src/App.css
@@ -1,68 +1,91 @@
-* {
-  margin: 0;
-  padding: 0;
+@import url('https://fonts.googleapis.com/icon?family=Material+Icons');
+@import url("//fonts.googleapis.com/css?family=Work+Sans:300,400,600");
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+
+*,::before,::after {
   box-sizing: border-box;
-  font-weight: normal;
 }
 
-.container {
-  width: 50%;
-  height: 50%;
-  margin: 150px auto;
-  padding: 20px;
-}
-
-.form {
-    display: flex;
-    justify-content: space-between;
-}
-
-input {
-  padding: 10px;
-  margin-top: 15px;
+.task-title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
   height: 50px;
-  border: 1px solid black;
+  margin-bottom: 30px;
+  
+  font-size: 30px;
+  text-decoration: underline;
+}
+
+.workout-box {
+  width: 600px;
+  padding: 30px;
+  margin-bottom: 20px;
+
+  border: 2px solid;
+}
+
+.workout-form {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 15px;
+}
+
+.workout-section {
+  display: flex;
+  flex-direction: column;
+}
+
+button {
+  align-self: flex-end;
+  width: 35px;
+  height: 35px;
+
+  cursor: pointer;
+}
+
+label {
+  margin-bottom: 10px;
+
+  font-style: italic;
+}
+
+.workout-input {
+  height: 35px;
+  padding: 5px 10px;
+
+  border: 1px solid gray;
   border-radius: 10px;
   outline: none;
 }
 
-#submit {
-  background-color: #fff;
-  width: 75px;
-  align-self: flex-end;
+.workout-list {
+  width: 100%;
 }
 
-#submit:hover {
-  cursor: pointer;
-}
-
-.table {
-    width: 100%;
-    margin-top: 15px;
-}
-
-.table__title {
+.workout-list_titles {
   display: flex;
-  padding: 0 40px;
   justify-content: space-between;
+  margin-bottom: 10px;
+
+  font-weight: 700;
 }
 
-.table__items {
-  margin-top: 15px;
-  padding: 5px 40px;
-  border: 2px solid black;
-  border-radius: 10px;
-}
-
-.table__item {
+.workout-item {
   display: flex;
   justify-content: space-between;
 }
 
-.table__item:nth-of-type(n + 2) {
-  margin-top: 15px;
+.workout-item_actions {
+  display: flex;
+  width: 65px;
+  justify-content: space-around;
+  align-items: center;
 }
 
-.table__delete:hover {
+.material-icons {
+  font-family: 'Material Icons';
+
   cursor: pointer;
 }
